--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.slidebar{
+.slide{
     
     width: 250px;
     display: flex;
@@ -15,7 +15,7 @@
 
     body {
         font-family: Arial, sans-serif;
-        background-color:black;
+        background-color: #121212;;
         color: white;
         margin: 0;
         padding: 0;
@@ -45,7 +45,7 @@
     }
     
     .amenu1{
-    
+        padding-left: 10px;
         height: 30px;
         width: 30px;
 
@@ -61,6 +61,7 @@
     width: 250px;
     height: 250px;
     margin-top: 90px;
+    padding-left: 10px;
 
 }
 .playlist1{
@@ -70,7 +71,7 @@
 }
 
 
-.install{
+.download{
     
     margin-top: 25px;
     display: flex;
@@ -79,17 +80,17 @@
 }
 
 
-.install-img{
+.download-img{
     height: 30px;
     width: 30px;
 }
 
 
-.abc{
+.ab{
     margin-top: 7px;
 }
 
-.q{ font-size: 15px;}
+.dream { font-size: 15px;}
 
 
 
@@ -110,7 +111,7 @@
 
 
 
-.main-content{
+.content{
 
     overflow-y: auto;
     flex-grow: 1;
@@ -169,8 +170,9 @@ width: 350px;
    justify-content: center;
 }
 
-#slogo{
+#logo1{
     padding-left: 30px;
+    padding-top: 20px;
     
 }
 
@@ -188,18 +190,19 @@ width: 350px;
 }
 
 
-.ab{
 
 
-   font-size: 20px;
+.like {
+
+   font-size: 15px;
 
 }
 
 .show-content{ 
     height: 260px;
-display: flex;
-flex-direction: row;
-gap: 60px;
+    display: flex;
+    flex-direction: row;
+    gap: 60px;
 }
 
 .show-content-box{
@@ -209,7 +212,7 @@ gap: 60px;
 }
 
 
-.play-bar{
+.bar{
     height: 100px;
     padding-left: 160px;
     width: 1200px;
@@ -219,7 +222,7 @@ gap: 60px;
 }
 
 
-.play-bar1{
+.bar1{
     height: 65px;
    
     width: 600px;
@@ -231,4 +234,20 @@ gap: 60px;
     width: 337px;
     height: 40px;
 
+}
+
+.install-img {
+    width: 40px;
+}
+
+/*.top-side {
+    display: flex;
+    flex-wrap: wrap;
+    width: 50px
+}*/
+
+.arrow img {
+    width: 100px;
+    justify-content: center;
+    align-items: center;
 }
